# podb-poc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
client/: Cargo.toml
client/src/: main.rs
lib/: Cargo.toml
lib/src/: api.rs  json_pod_converter.rs  lib.rs  public_log.rs  utils.rs
lib/src/membership/: mod.rs  predicates.rs  prover.rs  verifier.rs
pod_derive/: Cargo.toml
pod_derive/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  handlers.rs  main.rs
solver/: Cargo.toml
solver/src/: custom.rs  debug.rs  edb.rs  engine.rs  lib.rs  op.rs  proof_dag.rs  prop.rs  replay.rs  test_helpers.rs  types.rs  util.rs
solver/src/handlers/: binary.rs  container_insert.rs  container_update.rs  contains.rs  equal.rs  hashof.rs  lt.rs  lteq.rs  maxof.rs  mod.rs  not_contains.rs  not_equal.rs  productof.rs  publickeyof.rs  signed_by.rs  sumof.rs  ternary.rs  util.rs
solver/tests/: ethdos.rs  other.rs  replay_integration.rs
