[workspace]
resolver = "3"
members = ["client", "lib", "server", "solver", "pod_derive"]


[workspace.dependencies]
thiserror = { version = "2.0.12" }
petgraph = "0.8.2"
log = "0.4"
env_logger = "0.11"
itertools = "0.14.0"
hex = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
#pod2 = { git = "https://github.com/emlaufer/pod2", rev = "02d2ef77e60ce887bc11ae49e24f0dad35ac6e7c", default-features = false,  features = [  "backend_plonky2", "zk", "examples", "disk_cache" ] }
pod2 = { path = "../pod2", default-features = false,  features = [  "backend_plonky2", "zk", "examples", "disk_cache" ] }
