[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pod2_solver = { path = "../solver" }
pod2 = { workspace = true, features = ["examples"] }
hex = { workspace = true }
pod_derive = { path = "../pod_derive" }
tracing = { workspace = true }
