[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
bson = "2.13"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
pod2 = { workspace = true }
thiserror = "1.0"
toml = "0.8"
lib = { path = "../lib" }

[dev-dependencies]
tempfile = "3.0"
